# word_of_the_day

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  article.txt  bootstrap.py  bootstrap.sh  bootstrap_word_of_the_day.py  docker-compose.yml  pyproject.toml  roadmap.md  spec.md
.github/workflows/: ci-cd.yml
src/base_python_project/: __init__.py  cli.py  logger.py  main.py
src/word_of_the_day/: __init__.py  api.py  cli.py  config.py  dictionary.py  email_sender.py  generator.py  logger.py  main.py  pipeline.py  scheduler.py  scorers.py  selectors.py  storage.py  wikipedia_connector.py
src/word_of_the_day/connectors/: __init__.py  gutenberg.py  new_york_times.py  poetry_db.py  protocol.py  quotable.py  substack.py  wikipedia.py
src/word_of_the_day/static/: admin.css  admin.html  admin.js  index.html  index.js  style.css  subscribe.html  word.js
src/word_of_the_day/templates/: admin.html  index.html  map.html  subscribe.html  unsubscribe.html  word.html
src/word_of_the_day/templates/components/: navbar.html  subscribe_form.html  theme_switcher.html  vote_widget.html
src/word_of_the_day/templates/emails/: daily_digest.html
src/word_of_the_day/templates/layouts/: base.html
src/word_of_the_day/utils/: __init__.py  pos.py  text.py
tests/: conftest.py  test_admin.py  test_api.py  test_bootstrap.py  test_connectors.py  test_db_candidates.py  test_dictionary.py  test_email_pipeline.py  test_env_vars.py  test_generator.py  test_gutenberg_connector.py  test_logger.py  test_main.py  test_nyt_connector.py  test_pipeline.py  test_poetry_db_connector.py  test_pos_alternation.py  test_quotable_connector.py  test_scorers.py  test_selectors.py  test_storage.py  test_substack_connector.py  test_utils.py
