[project]
name = "base_python_project"
version = "0.1.0"
description = "A default Python project template using uv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
base_python_project = "base_python_project.cli:main"

[project.optional-dependencies]
# Analytics & Data Manipulation
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

# Machine Learning & AI
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
]

# Web APIs & Backend
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

# Data Engineering & Pipelines
eng = [
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0", # Or your preferred database driver
    "pyarrow>=14.0.0",
]

# Agentic & LLM Tooling
agents = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "instructor>=0.5.0", # Great for structured Pydantic outputs from LLMs
]

# Robust Command Line Interfaces
cli = [
    "click>=8.1.0",
    "rich>=13.4.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest-watch>=4.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/node_modules", "**/__pycache__"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
